# mayon

./: .envrc  .git-blame-ignore-revs  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Justfile  README.md  flake.nix  shell.nix
.crate-ffizer/: .ffizer.yaml  CMakeLists.txt.ffizer.hbs  Cargo.toml.ffizer.hbs  build.rs.ffizer.hbs  default.nix.hbs
.crate-ffizer/src/: hello.cpp.ffizer.hbs  lib.rs.ffizer.hbs
cmake/: asio.cmake  config.cmake
crates/: cxxbridge.nix  default.nix
crates/asio-poc/: CMakeLists.txt  Cargo.toml  build.rs  default.nix
crates/asio-poc/examples/: recv.rs
crates/asio-poc/include/: channel.h  future_void.h  timer.h  types.h
crates/asio-poc/src/: channel.cpp  channel.rs  future_void.cpp  future_void.rs  io_context.cpp  lib.rs  timer.cpp  timer.rs
crates/core-primitives/: CMakeLists.txt  Cargo.toml  build.rs  default.nix
crates/core-primitives/include/: lib.h
crates/core-primitives/src/: lib.cpp  lib.rs
crates/hello-world/: CMakeLists.txt  Cargo.toml  build.rs  default.nix
crates/hello-world/include/: channel.h  hello.h  io_context.h  timer.h
crates/hello-world/src/: channel.cpp  channel.rs  future_void.cpp  future_void.rs  hello.cpp  io_context.cpp  lib.rs  timer.cpp  timer.rs
crates/hello-world/src/foo/: mod.rs
crates/parachain/: CMakeLists.txt  Cargo.toml  build.rs  default.nix
crates/parachain/include/: primitives.h
crates/parachain/src/: lib.rs  primitives.cpp  primitives.rs  primitives_ffi.rs
crates/parachain/test-parachains/adder/: Cargo.toml
crates/parachain/test-parachains/undying/: Cargo.toml
crates/sp-primitives/runtime/: CMakeLists.txt  Cargo.toml  build.rs  default.nix
crates/sp-primitives/runtime/src/: header.rs  lib.rs
docs/: Build.md  index.md
docs/integration/: _category_.json  codebase.md  testing.md
docs/introduction/: background.md  overview.md
docs/poc/: _category_.json  async.md  core_primitives_rewrite.md  mayon.md  nix.md  poc.md
docs/report/: _category_.json  milestone_1.md
docs/research/: _category_.json  existing_ressources.md  proposed_approach.md
hello-world/: CMakeLists.txt  build.rs
hello-world/src/: hello.cpp
hello-world/src/foo/: mod.rs
nix/: cpp-libp2p.nix  crates.nix  deps.nix  ffizer.nix  microsoft_gsl.nix  overlay.nix  protobuf.nix  soralog.nix  sources.json  sqlite-modern-cpp.nix  tools.nix  tree.nix  yaml-cpp.nix
nix/crates/: cxxbridge-gen.nix  cxxbridge.nix
nix/tools/: cxxbridge-cmd.nix  ffizer.nix
scripts/: build_docker.sh  get-nix-closure.sh
tools/nix-build-rs/: Cargo.toml  LICENSE-MIT  README.md
tools/nix-build-rs/src/: abort.rs  config.rs  exprs.rs  lib.rs
tools/nix-build-rs/src/exprs/: github_locked_nixpkgs.nix  github_locked_package.nix
