[package]
name = "cpp-asio-poc"
version = "0.1.0"
edition.workspace = true
links = "cpp_asio_poc"

[dependencies]
cxx = { workspace = true }
log = "0.4.17"
tokio = { version = "1.24.1", features = ["full"] }

[dev-dependencies]
futures = "0.3.25"
tokio-stream = { version = "0.1" }

[build-dependencies]
cxx-build = { workspace = true }
cmake = { workspace = true }
