[package]
name = "polkadot-core-primitives"
version.workspace = true 
edition.workspace = true
links = "core_primitives"

[dependencies]
cxx = { workspace = true , optional = true }

sp-core = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
parity-scale-codec = { version = "3.3.0", default-features = false, features = [ "derive" ] }

runtime = {path = "../sp-primitives/runtime/", default-features = false}

[dev-dependencies]
futures = "0.3.25"
tokio-stream = { version = "0.1" }

[build-dependencies]
cxx-build.workspace = true
cmake.workspace = true
nix-build.workspace = true

[features]
default = [ "std" ]
std = [
	"scale-info/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"scale-info/std",
	"parity-scale-codec/std",
  "runtime/std",
  "dep:cxx"
]
