[package]
name = "hello-world"
version = "0.1.0"
edition.workspace = true
links = "hello_world"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = { workspace = true }
log = "0.4.17"
tokio = { version = "1.24.1", features = ["full"] }

[build-dependencies]
cxx-build = { workspace = true }
cmake = { workspace = true }
