[package]
name = "hello-world"
version = "0.1.0"
edition.workspace = true
links = "hello_world"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = { workspace = true }

[build-dependencies]
cxx-build = { workspace = true }
cmake = { workspace = true }
