[package]
name = "polkadot-parachain"
version = "0.1.0"
links = "polkadot_parachain"
edition.workspace = true

[dependencies]
cxx = { workspace = true , optional = true }
# note: special care is taken to avoid inclusion of `sp-io` externals when compiling
# this crate for WASM. This is critical to avoid forcing all parachain WASM into implementing
# various unnecessary Substrate-specific endpoints.
parity-scale-codec = { version = "3.3.0", default-features = false, features = [ "derive" ] }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
polkadot-core-primitives = { path = "../core-primitives", default-features = false }
derive_more = "0.99.11"

# all optional crates.
serde = { version = "1.0.137", default-features = false, features = [ "derive" ], optional = true }

[build-dependencies]
cxx-build = { workspace = true }
cmake = { workspace = true }

[features]
default = ["std"]
wasm-api = []
std = [
	"parity-scale-codec/std",
	"scale-info/std",
	"serde/std",
	"sp-std/std",
	"sp-runtime/std",
	"sp-core/std",
	"polkadot-core-primitives/std",
	"frame-support/std",
  "dep:cxx"
]
runtime-benchmarks = []
